--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,10 +31,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.42857143, 0.57142857])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priorsv = [1 / 2, 1 / 2]\n",
+    "likelihoodsv = [30 / 40, 20 / 20]\n",
+    "def bayes_rule(priorsv, likehoodsv):\n",
+    "    margv = sum(np.multiply(priorsv, likelihoodsv))\n",
+    "    postv = np.divide(np.multiply(priorsv, likelihoodsv), margv)\n",
+    "    return postv\n",
+    "bayes_rule(priorsv, likelihoodsv)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the vanilla cookie I picked came from Bowl 1 is 0.429\n"
+     ]
+    }
+   ],
+   "source": [
+    "bowl_1v = round(bayes_rule(priorsv, likelihoodsv)[0],3)\n",
+    "print(\"The probability that the vanilla cookie I picked came from Bowl 1 is {}\".format(bowl_1v))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,10 +82,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the vanilla cookie I picked came from Bowl 2 is 0.571\n"
+     ]
+    }
+   ],
+   "source": [
+    "bowl_2v = round(bayes_rule(priorsv, likelihoodsv)[1],3)\n",
+    "print(\"The probability that the vanilla cookie I picked came from Bowl 2 is {}\".format(bowl_2v))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +107,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.2, 0.8])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priorsc = [1 / 2, 1 / 2]\n",
+    "likelihoodsc = [10 / 40, 20 / 20]\n",
+    "def bayes_rule(priorsc, likehoodsc):\n",
+    "    margc = sum(np.multiply(priorsc, likelihoodsc))\n",
+    "    postc = np.divide(np.multiply(priorsc, likelihoodsc), margc)\n",
+    "    return postc\n",
+    "bayes_rule(priorsc, likelihoodsc)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the chocolate cookie I picked came from Bowl 1 is 0.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "bowl_1c = round(bayes_rule(priorsc, likelihoodsc)[0],3)\n",
+    "print(\"The probability that the chocolate cookie I picked came from Bowl 1 is {}\".format(bowl_1c))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the chocolate cookie I picked came from Bowl 2 is 0.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "bowl_2c = round(bayes_rule(priorsc, likelihoodsc)[1],3)\n",
+    "print(\"The probability that the chocolate cookie I picked came from Bowl 2 is {}\".format(bowl_2c))\n"
+   ]
   },
   {
    "cell_type": "markdown",
