--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,10 +31,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.6, 0.4])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bowls = [1/2, 1/2]\n",
+    "cookies_vanila = [3/4, 0.5] \n",
+    "def bayes_rule(bowls, cookies):\n",
+    "    marg = sum(np.multiply(bowls, cookies))\n",
+    "    post = np.divide(np.multiply(bowls, cookies), marg)\n",
+    "    return post\n",
+    "\n",
+    "bayes_rule(bowls, cookies_vanila)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,10 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#the probability is 0.4 "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +81,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.33333333, 0.66666667])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cookies_choco = [1/4, 0.5] \n",
+    "\n",
+    "bayes_rule(bowls, cookies_choco)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
