--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -198,10 +198,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.74074074, 0.25925926])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priorsy = [1 / 2, 1 / 2]\n",
+    "likelihoodsy = [(2 / 10)*(2 / 10),(1 / 10)*(14 / 100)]\n",
+    "def bayes_rule(priorsy, likehoodsy):\n",
+    "    margy = sum(np.multiply(priorsy, likelihoodsy))\n",
+    "    posty = np.divide(np.multiply(priorsy, likelihoodsy), margy)\n",
+    "    return posty\n",
+    "bayes_rule(priorsy, likelihoodsy)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -212,10 +231,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the yellow candy I picked came from Bag 2 is 0.259\n"
+     ]
+    }
+   ],
+   "source": [
+    "bag_2y = round(bayes_rule(priorsy, likelihoodsy)[1],3)\n",
+    "print(\"The probability that the yellow candy I picked came from Bag 2 is {}\".format(bag_2y))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,10 +256,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.97222222, 0.02777778])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priorsg = [1 / 2, 1 / 2]\n",
+    "likelihoodsg = [(1 / 10)*(14 / 100),(2 / 100)*(2 / 100)]\n",
+    "def bayes_rule(priorsg, likehoodsg):\n",
+    "    margg = sum(np.multiply(priorsg, likelihoodsg))\n",
+    "    postg = np.divide(np.multiply(priorsg, likelihoodsg), margg)\n",
+    "    return postg\n",
+    "bayes_rule(priorsg, likelihoodsg)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the green candy I picked came from Bag 2 is 0.972\n"
+     ]
+    }
+   ],
+   "source": [
+    "bag_1g = round(bayes_rule(priorsg, likelihoodsg)[0],3)\n",
+    "print(\"The probability that the green candy I picked came from Bag 2 is {}\".format(bag_1g))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the green candy I picked came from Bag 2 is 0.028\n"
+     ]
+    }
+   ],
+   "source": [
+    "bag_2g = round(bayes_rule(priorsg, likelihoodsg)[1],3)\n",
+    "print(\"The probability that the green candy I picked came from Bag 2 is {}\".format(bag_2g))"
+   ]
   },
   {
    "cell_type": "markdown",
