--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -11,13 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import scipy"
    ]
   },
   {
@@ -31,10 +32,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "priors = [1/2,1/2]\n",
+    "likelihoods = [3/4, 0.5]\n",
+    "def bayes_rule(priors, likehoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods))\n",
+    "    post = np.divide(np.multiply(priors, likelihoods), marg)\n",
+    "    return post[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes_rule(priors, likelihoods)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,10 +73,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "priors = [1/2,1/2]\n",
+    "likelihoods = [3/4, 0.5]\n",
+    "def bayes_rule(priors, likehoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods))\n",
+    "    post = np.divide(np.multiply(priors, likelihoods), marg)\n",
+    "    return post[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes_rule(priors, likelihoods)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +114,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "priors = [1/2,1/2]\n",
+    "likelihoods = [1/4, 0.5]\n",
+    "def bayes_rule(priors, likehoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods))\n",
+    "    post = np.divide(np.multiply(priors, likelihoods), marg)\n",
+    "    return post"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.33333333, 0.66666667])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes_rule(priors, likelihoods)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
