--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -31,10 +31,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "priors = [1/2,1/2] \n",
+    "total = 40\n",
+    "likelihoods_vanilla = [30/total, 20/total]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bayes(priors, likelihoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods)) \n",
+    "    post = np.divide(np.multiply(priors,likelihoods), marg) \n",
+    "    return \"The probability that vanilla cookie came from Bowl 1 is {} and from Bowl 2 is {}\".format(post[0], post[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The probability that vanilla cookie came from Bowl 1 is 0.6 and from Bowl 2 is 0.4'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes(priors, likelihoods_vanilla)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,7 +84,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#0.4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +97,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "priors = [1/2,1/2] \n",
+    "total = 40\n",
+    "likelihoods_choco = [10/total, 20/total]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bayes2(priors, likelihoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods)) \n",
+    "    post = np.divide(np.multiply(priors,likelihoods), marg) \n",
+    "    return \"The probability that chocolate cookie came from Bowl 1 is {} and from Bowl 2 is {}\".format(post[0], post[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The probability that chocolate cookie came from Bowl 1 is 0.3333333333333333 and from Bowl 2 is 0.6666666666666666'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes2(priors, likelihoods_choco)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,7 +172,53 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#p(A) que sea de la \n",
+    "#p(B) que sea de ese color dentro de la bola. en el caso de amarillo 30/100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "priors = [1/2,1/2] \n",
+    "likelihoods_yellow = [30/100, 14/100]\n",
+    "likelihoods_green = [10/100, 20/100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bayes3(priors, likelihoods_yellow):\n",
+    "    marg = sum(np.multiply(priors, likelihoods)) \n",
+    "    post = np.divide(np.multiply(priors,likelihoods), marg) \n",
+    "    return \"The probability that yellow candy came from Bowl 1 is {} and from Bowl 2 is {}\".format(post[0], post[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The probability that yellow candy came from Bowl 1 is 0.3333333333333333 and from Bowl 2 is 0.6666666666666666'"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes3(priors, likelihoods_yellow)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +229,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "likelihoods_green = [10/100, 20/100]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,13 +242,6 @@
    "source": [
     "What are the probabilities that the green one came from Bag 1 and Bag 2 respectively?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
