--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,19 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bayes(priors, likelihoods):\n",
     "    marg = sum(np.multiply(priors, likelihoods)) \n",
-    "    post = np.divide(np.multiply(priors,likelihoods), marg) \n",
-    "    return \"The probability that vanilla cookie came from Bowl 1 is {} and from Bowl 2 is {}\".format(post[0], post[1])"
+    "    prob = np.divide(np.multiply(priors,likelihoods), marg) \n",
+    "    return \"The probability that vanilla cookie came from Bowl 1 is {} and from Bowl 2 is {}\".format(prob[0], prob[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "'The probability that vanilla cookie came from Bowl 1 is 0.6 and from Bowl 2 is 0.4'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,19 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bayes2(priors, likelihoods):\n",
     "    marg = sum(np.multiply(priors, likelihoods)) \n",
-    "    post = np.divide(np.multiply(priors,likelihoods), marg) \n",
-    "    return \"The probability that chocolate cookie came from Bowl 1 is {} and from Bowl 2 is {}\".format(post[0], post[1])"
+    "    prob = np.divide(np.multiply(priors,likelihoods), marg) \n",
+    "    return \"The probability that chocolate cookie came from Bowl 1 is {} and from Bowl 2 is {}\".format(prob[0], prob[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "'The probability that chocolate cookie came from Bowl 1 is 0.3333333333333333 and from Bowl 2 is 0.6666666666666666'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,49 +169,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#p(A) que sea de la \n",
-    "#p(B) que sea de ese color dentro de la bola. en el caso de amarillo 30/100"
+    "#p(A) que sea de una bolsa\n",
+    "#p(B) que sea de ese color dentro de la bolsa\n",
+    "#likelihood. Probabilidad de amarillo en bolsa 1 x verde en bolsa 2, verde 1 y amarillo 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
     "priors = [1/2,1/2] \n",
-    "likelihoods_yellow = [30/100, 14/100]\n",
-    "likelihoods_green = [10/100, 20/100]"
+    "likelihoods_yellow = [(20/100*20/100), (10/100*14/100)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bayes3(priors, likelihoods_yellow):\n",
+    "def bayes3(priors, likelihoods):\n",
     "    marg = sum(np.multiply(priors, likelihoods)) \n",
-    "    post = np.divide(np.multiply(priors,likelihoods), marg) \n",
-    "    return \"The probability that yellow candy came from Bowl 1 is {} and from Bowl 2 is {}\".format(post[0], post[1])"
+    "    prob = np.divide(np.multiply(priors,likelihoods), marg) \n",
+    "    return \"The probability that yellow candy came from Bowl 1 is {}\".format(prob[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The probability that yellow candy came from Bowl 1 is 0.3333333333333333 and from Bowl 2 is 0.6666666666666666'"
+       "'The probability that yellow candy came from Bowl 1 is 0.7407407407407407'"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,10 +229,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "priors = [1/2,1/2] \n",
+    "likelihoods_yellow_2 = [(14/100*10/100), (20/100*20/100)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bayes3(priors, likelihoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods)) \n",
+    "    prob = np.divide(np.multiply(priors,likelihoods), marg) \n",
+    "    return \"The probability that yellow candy came from Bowl 2 is {}\".format(prob[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The probability that yellow candy came from Bowl 2 is 0.25925925925925924'"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes3(priors, likelihoods_yellow_2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -243,10 +278,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "priors = [1/2,1/2] \n",
+    "likelihoods_green = [(10/100*14/100), (20/100*20/100)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bayes3(priors, likelihoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods)) \n",
+    "    prob = np.divide(np.multiply(priors,likelihoods), marg) \n",
+    "    return \"The probability that green candy came from Bowl 1 is {} and from Bowl 2 is {}\".format(prob[0], prob[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The probability that green candy came from Bowl 1 is 0.25925925925925924 and from Bowl 2 is 0.7407407407407407'"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes3(priors, likelihoods_green)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -261,10 +331,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "priors = [1/3, 1/3, 1/3] \n",
+    "likelihoods = [1/2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bayes3(priors, likelihoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods)) \n",
+    "    prob = np.divide(np.multiply(priors,likelihoods), marg) \n",
+    "    return \"The probability is {}\".format(prob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The probability is [0.33333333 0.33333333 0.33333333]'"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes3(priors, likelihoods)\n",
+    "\n",
+    "#La probabilidad de cada puerta al inicio es 0.33..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "priors = [1/3, 2/3] \n",
+    "likelihoods = [1/2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bayes3(priors, likelihoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods)) \n",
+    "    prob = np.divide(np.multiply(priors,likelihoods), marg) \n",
+    "    return \"The probability is {}\".format(prob)\n",
+    "\n",
+    "# La probabilidad de la primera puerta sigue siendo 1/3, la puerta siguiente pasa a ser 2/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The probability is [0.33333333 0.66666667]'"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes3(priors, likelihoods)\n",
+    "\n",
+    "#La probabilidad de la segunda puerta es 0.66... mientras que la primera sigue siendo 0.33..."
+   ]
   },
   {
    "cell_type": "markdown",
