--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,10 +31,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prior=1/2\n",
+    "likelihood=3/4\n",
+    "marg=1/2*3/4 + 1/2*1/2\n",
+    "(prior*likelihood)/marg\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,10 +61,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "likelihood2=1/2\n",
+    "(prior*likelihood2)/marg"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +89,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prob Bowl 1: 0.4444444444444444\n",
+      "Prob Bowl 2: 0.6666666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "likelihood_c1=1/3\n",
+    "marg_choc=1/2*1/4+1/2*1/2\n",
+    "print(\"Prob Bowl 1:\",(prior*likelihood_c1)/marg_choc)\n",
+    "likelihood_c2=1/2\n",
+    "print(\"Prob Bowl 2:\",(prior*likelihood_c2)/marg_choc)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +140,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7407407407407408"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Probabilidad de haber cogido una bola de la bolsa 1\n",
+    "prior=1 # Suponiendo que se sabe que se coge una bola de cada una\n",
+    "\n",
+    "# Probabilidad de haber cogido la bola amarilla en la bolsa 1 y la verde\n",
+    "# de la bolsa 2\n",
+    "likelihood_yel_b1=0.2*0.2\n",
+    "# Marg= probabilidad de haber cogido de la bolsa1 el amarillo y de la bolsa2 \n",
+    "# el verde + la probabilidad de haber cogido de la bolsa1 el verde y de \n",
+    "# la bolsa2 el amarillo\n",
+    "marg=0.2*0.2+0.14*0.1\n",
+    "(prior*likelihood_yel_b1)/marg"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +177,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25925925925925924"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Probabilidad de haber cogido la bola amarilla en la bolsa 2 y la verde\n",
+    "# de la bolsa 1\n",
+    "likelihood_yel_b2=0.14*0.1\n",
+    "\n",
+    "(prior*likelihood_yel_b2)/marg"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,10 +208,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prob Green - Bowl 1:  0.25925925925925924\n",
+      "Prob Green - Bowl 2:  0.7407407407407408\n"
+     ]
+    }
+   ],
+   "source": [
+    "prior=1\n",
+    "likelihood_green_b1=0.14*0.1\n",
+    "\n",
+    "likelihood_green_b2=0.2*0.2\n",
+    "\n",
+    "marg=0.14*0.1+0.2*0.2\n",
+    "\n",
+    "print(\"Prob Green - Bowl 1: \",(prior*likelihood_green_b1)/marg)\n",
+    "print(\"Prob Green - Bowl 2: \",(prior*likelihood_green_b2)/marg)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,10 +245,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probabilidad de que el coche esté en A:  0.3333333333333333\n",
+      "Probabilidad de que el coche esté en C:  0.6666666666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Probabilidad de que el coche esté en A sabiendo que no está en D\n",
+    "\n",
+    "# Probabilidad de que sea A\n",
+    "prior_A=1/3\n",
+    "likelihood=1/3\n",
+    "marg=1/3\n",
+    "\n",
+    "print(\"Probabilidad de que el coche esté en A: \",(prior_A*likelihood)/marg)\n",
+    "\n",
+    "# Probabilidad de que sea C\n",
+    "prior_C=1/3\n",
+    "likelihood=2/3\n",
+    "marg=1/3\n",
+    "\n",
+    "\n",
+    "print(\"Probabilidad de que el coche esté en C: \",(prior_C*likelihood)/marg)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,10 +288,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n_visits= 100\n",
+    "sign_up=14\n",
+    "prior = pd.Series(np.random.uniform(0, 1, 100000))\n",
+    "\n",
+    "sim_data = list(map(lambda x: np.random.binomial(n_visits, x), prior))\n",
+    "posteriors = prior[[i for i, x in enumerate(sim_data) if x == sign_up]]\n",
+    "posteriors.hist();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,10 +310,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    942.000000\n",
+       "mean       0.145304\n",
+       "std        0.034581\n",
+       "min        0.048288\n",
+       "25%        0.121594\n",
+       "50%        0.141900\n",
+       "75%        0.167099\n",
+       "max        0.260365\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "posteriors.describe()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,16 +345,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1418997600006387 0.20933641811673737\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(posteriors.quantile(0.5),posteriors.quantile(0.95))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "What is the Maximum Likelihood Estimate?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.14"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " rounded.mode()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.13800424628450106"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(rounded[rounded == mode]) / len(rounded)"
    ]
   },
   {
@@ -221,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
