terminado de verdad

--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -419,22 +419,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "redondo= posteriors.round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.09391279203633071, 0.20891766683745133)"
+       "(0.09, 0.21)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(np.percentile(posteriors, 5), np.percentile(posteriors, 95))"
+    "(np.percentile(redondo, 5), np.percentile(redondo, 95))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "moda=redondo.mode()[0]"
    ]
   },
   {
@@ -446,30 +464,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    978.000000\n",
-       "mean       0.148555\n",
-       "std        0.034718\n",
-       "min        0.042117\n",
-       "25%        0.124619\n",
-       "50%        0.146463\n",
-       "75%        0.171051\n",
-       "max        0.258819\n",
-       "dtype: float64"
+       "0.1165644171779141"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "posteriors.describe()"
+    "ji = list(redondo).count(moda)/len(redondo)\n",
+    "ji"
    ]
   },
   {
