Monty showed us wrong - We got the car!

--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -11,13 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -31,10 +31,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of vanilla coockie comming from bowl 1 and 2 are [0.6 0.4] respectively.\n"
+     ]
+    }
+   ],
+   "source": [
+    "bowl_1_v = 30\n",
+    "bowl_1_c = 10\n",
+    "\n",
+    "bowl_2_v = 20\n",
+    "bowl_2_c = 20\n",
+    "##############################\n",
+    "priors = [1 / 2, 1 / 2]\n",
+    "likelihoods = [3/4, 2/4]\n",
+    "\n",
+    "def bayes_rule(priors, likehoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods))\n",
+    "    post = np.divide(np.multiply(priors, likelihoods), marg)\n",
+    "    return post\n",
+    "\n",
+    "result = bayes_rule(priors, likelihoods)\n",
+    "\n",
+    "print (\"Probability of vanilla coockie comming from bowl 1 and 2 are\", result, \"respectively.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,10 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# P(Bowl_2|Vanilla) = 0.4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +87,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of chocolate coockie comming from bowl 1 and 2 are [0.33 0.67] respectively.\n"
+     ]
+    }
+   ],
+   "source": [
+    "likelihoods = [1/4, 2/4]\n",
+    "\n",
+    "chocoresult = bayes_rule(priors, likelihoods)\n",
+    "print (\"Probability of chocolate coockie comming from bowl 1 and 2 are\", chocoresult.round(2), \"respectively.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +136,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def bayes_rule_candies(p, l):\n",
+    "    marg = sum(np.multiply(p, l))\n",
+    "    post = np.divide(np.multiply(p, l), marg)\n",
+    "    return post"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "These are the results for P of a yellow candie after we extracted a green one from bag_1 and bag_2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.74, 0.26])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priors_2 = [0.5, 0.5]\n",
+    "likelihoods_green_yellow = [(0.2*0.2), (0.14*0.10)] #Here we operate with the product of Yellow_1*Green_2 and Yellow_2*Green_1\n",
+    "\n",
+    "print(\"These are the results for P of a yellow candie after we extracted a green one from bag_1 and bag_2\")\n",
+    "bayes_rule_candies(priors_2, likelihoods_green_yellow).round(2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +186,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# P(bag_2|Yellow) = 0.26"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,10 +202,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "These are the results for P of a green candie from bag_1 and bag_2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.33, 0.67])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priors_2 = [0.5, 0.5]\n",
+    "likelihoods_green = [0.1, 0.2] # Here we operate with the % of Green in both bag_1 and bag_2. We are not considering the yellow one as we take the premise\n",
+    "                                      # that the green one is the first to be extracted\n",
+    "\n",
+    "print(\"These are the results for P of a green candie from bag_1 and bag_2\")\n",
+    "bayes_rule_candies(priors_2, likelihoods_green).round(2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,10 +245,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def bayes_rule_monty(p, l):\n",
+    "    marg = sum(np.multiply(p, l))\n",
+    "    post = np.divide(np.multiply(p, l), marg)\n",
+    "    return post"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.33333333, 0.33333333, 0.33333333])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prior = [1/3, 1/3, 1/3]\n",
+    "likelihood_car = [(1/3),(1/3),(1/3)]\n",
+    "\n",
+    "bayes_rule_monty(prior, likelihood_car)\n",
+    "\n",
+    "#  Before the host open any door, we have the same probability to open the right door\n",
+    "# However, let's check what happens after we open the door"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.33, 0.67])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we change the likelihood and prior variable\n",
+    "new_prior = [0.5, 0.5] \n",
+    "\n",
+    "# We only have two doors left. Therefore, we cannot consider that third one that it's already opened (remember that our host has showed us\n",
+    "# that the openned door had nothing). Thus, the unopenned and unchoosen door, accumulate the openned door probability.\n",
+    "# So, from 1/3 of probability, we sum it and obtain 2/3 of probability\n",
+    "\n",
+    "likelihood_door_open = [(1/3)*(0.5), (2/3)*(0.5)]\n",
+    "\n",
+    "bayes_rule_monty(new_prior,likelihood_door_open).round(2) # We are doubling our probability if wue pick the other door so, pick the other one!!"
+   ]
   },
   {
    "cell_type": "markdown",
