faltaba un ejercicio que se había borrado

--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -575,6 +575,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    10018.000000\n",
+       "mean         0.147006\n",
+       "std          0.034555\n",
+       "min          0.049742\n",
+       "25%          0.122517\n",
+       "50%          0.144589\n",
+       "75%          0.169192\n",
+       "max          0.319473\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "posteriors.describe()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
