--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -329,16 +329,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.33333333, 0.        , 0.66666667])"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from random import randint\n",
+    "# I am supossing that I have chosen Door A.\n",
     "\n",
-    "for i in range(100): \n",
-    "    a = randint(1,3)\n",
-    "    \n",
-    "    "
+    "priorsd = [1 / 3, 1 / 3, 1 / 3]\n",
+    "likelihoodsd = [1 / 2, 0, 1]\n",
+    "def bayes_rule(priorsd, likehoodsd):\n",
+    "    margd = sum(np.multiply(priorsd, likelihoodsd))\n",
+    "    postd = np.divide(np.multiply(priorsd, likelihoodsd), margd)\n",
+    "    return postd\n",
+    "bayes_rule(priorsd, likelihoodsd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of winning switching to Door C is 0.667, while the probability of winning sticking to Door A is 0.333\n"
+     ]
+    }
+   ],
+   "source": [
+    "door_a = round(bayes_rule(priorsd, likelihoodsd)[0],3)\n",
+    "door_c = round(bayes_rule(priorsd, likelihoodsd)[2],3)\n",
+    "print(\"The probability of winning switching to Door C is {}, while the probability of winning sticking to Door A is {}\".format(door_c, door_a))\n"
    ]
   },
   {
@@ -454,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +504,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +534,7 @@
     }
    ],
    "source": [
-    "print(round(posterior.quantile(.025),3), '|', round(posterior.quantile(.975),3))"
+    "print(round(posterior.quantile(.025),3), '|', round(posterior.quantile(.975),3))\n"
    ]
   },
   {
@@ -513,22 +546,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum Likelihood Estimate:  0.14 | 0.12\n"
+      "Maximum Likelihood Estimate:  0.137 | 0.014\n"
      ]
     }
    ],
    "source": [
-    "rounded = posteriors.round(2)\n",
+    "rounded = posteriors.round(3)\n",
     "mode = rounded.mode()[0]\n",
     "probability = list(rounded).count(mode)/len(rounded)\n",
-    "print('Maximum Likelihood Estimate: ', mode, '|', round(probability, 3))"
+    "print('Maximum Likelihood Estimate: ', mode, '|', round(probability, 3))\n"
    ]
   }
  ],
