--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -510,6 +510,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       0.048220\n",
+       "1       0.050451\n",
+       "2       0.051801\n",
+       "3       0.053947\n",
+       "4       0.055224\n",
+       "5       0.056714\n",
+       "6       0.057522\n",
+       "7       0.057691\n",
+       "8       0.057977\n",
+       "9       0.058201\n",
+       "10      0.058777\n",
+       "11      0.058843\n",
+       "12      0.059031\n",
+       "13      0.059650\n",
+       "14      0.059985\n",
+       "15      0.060013\n",
+       "16      0.060124\n",
+       "17      0.060387\n",
+       "18      0.060830\n",
+       "19      0.061588\n",
+       "20      0.061672\n",
+       "21      0.062268\n",
+       "22      0.062822\n",
+       "23      0.062954\n",
+       "24      0.063367\n",
+       "25      0.064025\n",
+       "26      0.064790\n",
+       "27      0.064867\n",
+       "28      0.065438\n",
+       "29      0.065616\n",
+       "          ...   \n",
+       "9939    0.260991\n",
+       "9940    0.261012\n",
+       "9941    0.261710\n",
+       "9942    0.261720\n",
+       "9943    0.262647\n",
+       "9944    0.263812\n",
+       "9945    0.263895\n",
+       "9946    0.264547\n",
+       "9947    0.264708\n",
+       "9948    0.264849\n",
+       "9949    0.264878\n",
+       "9950    0.265398\n",
+       "9951    0.265841\n",
+       "9952    0.266139\n",
+       "9953    0.267085\n",
+       "9954    0.267397\n",
+       "9955    0.267547\n",
+       "9956    0.267842\n",
+       "9957    0.268494\n",
+       "9958    0.269064\n",
+       "9959    0.269212\n",
+       "9960    0.271961\n",
+       "9961    0.276478\n",
+       "9962    0.278947\n",
+       "9963    0.280396\n",
+       "9964    0.282350\n",
+       "9965    0.285825\n",
+       "9966    0.291527\n",
+       "9967    0.298789\n",
+       "9968    0.301644\n",
+       "Length: 9969, dtype: float64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "posteriors.mode()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
