--- a/module-2/lab-bayesian-statistics/your-code/main.ipynb
+++ b/module-2/lab-bayesian-statistics/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,10 +31,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priors = [0.5, 0.5]\n",
+    "likelihoods = [0.75,0.5]\n",
+    "\n",
+    "def bayes_rule(priors, likehoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods))\n",
+    "    post = np.divide(np.multiply(priors, likelihoods), marg)\n",
+    "    return post\n",
+    "\n",
+    "\n",
+    "bayes_rule(priors, likelihoods)[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,10 +67,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priors = [0.5, 0.5]\n",
+    "likelihoods = [0.75, 0.5]\n",
+    "\n",
+    "def bayes_rule(priors, likehoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods))\n",
+    "    post = np.divide(np.multiply(priors, likelihoods), marg)\n",
+    "    return post\n",
+    "\n",
+    "\n",
+    "bayes_rule(priors, likelihoods)[1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +103,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.33333333, 0.66666667])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priors = [0.5, 0.5]\n",
+    "likelihoods = [0.25,0.5]\n",
+    "\n",
+    "def bayes_rule(priors, likehoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods))\n",
+    "    post = np.divide(np.multiply(priors, likelihoods), marg)\n",
+    "    return post\n",
+    "\n",
+    "\n",
+    "bayes_rule(priors, likelihoods)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +161,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7407407407407408"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=(0.2*0.2)/(0.2*0.2+0.1*0.14)\n",
+    "a\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7407407407407408"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priors = [0.5, 0.5]\n",
+    "likelihoods = [0.2*0.2, 0.1*0.14]\n",
+    "\n",
+    "def bayes_rule(priors, likehoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods))\n",
+    "    post = np.divide(np.multiply(priors, likelihoods), marg)\n",
+    "    return post\n",
+    "\n",
+    "\n",
+    "bayes_rule(priors, likelihoods)[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +218,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7407407407407408"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priors = [0.5, 0.5]\n",
+    "likelihoods = [0.1*0.14, 0.2*0.2]\n",
+    "\n",
+    "def bayes_rule(priors, likehoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods))\n",
+    "    post = np.divide(np.multiply(priors, likelihoods), marg)\n",
+    "    return post\n",
+    "\n",
+    "\n",
+    "bayes_rule(priors, likelihoods)[\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,10 +255,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.25925926, 0.74074074])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priors = [0.5, 0.5]\n",
+    "likelihoods = [0.1*0.14, 0.2*0.2]\n",
+    "\n",
+    "def bayes_rule(priors, likehoods):\n",
+    "    marg = sum(np.multiply(priors, likelihoods))\n",
+    "    post = np.divide(np.multiply(priors, likelihoods), marg)\n",
+    "    return post\n",
+    "\n",
+    "\n",
+    "bayes_rule(priors, likelihoods)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,7 +298,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Me movería a la puerta C puesto que la probabilidad de acertar es mayor (2/3)."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,10 +313,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "n_draws = 1000000\n",
+    "prior = pd.Series(np.random.uniform(0, 1, n_draws))\n",
+    "\n",
+    "n_visits = 100\n",
+    "sign_up = 14\n",
+    "\n",
+    "\n",
+    "\n",
+    "def generative_model(probability):\n",
+    "    return np.random.binomial(n_visits, probability)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,10 +343,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sim_data = list(map(lambda x: generative_model(x), prior))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,16 +359,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.09381898119426134, 0.2062007888860687]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "posteriors = prior[[i for i, x in enumerate(sim_data) if x == sign_up]]\n",
+    "a=posteriors.quantile(0.05)\n",
+    "b=posteriors.quantile(0.95)\n",
+    "[a,b]"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "What is the Maximum Likelihood Estimate?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "posteriors = prior[[i for i, x in enumerate(sim_data) if x == sign_up]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.11294188136608747"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rounded = posteriors.round(2)\n",
+    "mode = rounded.mode()\n",
+    "\n",
+    "\n",
+    "mode = mode[0]\n",
+    "\n",
+    "len(rounded[rounded == mode]) / len(rounded)"
    ]
   },
   {
@@ -221,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
